--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -11,7 +11,9 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
+log = "0.4.21"
 wasm-bindgen = "0.2.84"
+wasm-logger = "0.2.0"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
