--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 log = "0.4.21"
 regex = "1.10.5"
+serde = { version = "1.0.0", features = ["derive"] }
 svg = "0.17"
 
 [dev-dependencies]
