Use nom for parsing

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 log = "0.4.21"
+nom = "7.1"
 regex = "1.10.5"
 serde = { version = "1.0.0", features = ["derive"] }
 svg = "0.17"
