--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -8,6 +8,7 @@ log = "0.4.21"
 nom = "7.1"
 serde = { version = "1.0.0", features = ["derive"] }
 svg = "0.17"
+urlencoding = "2.1"
 
 [dev-dependencies]
 env_logger = "0.11.3"
