--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -3,6 +3,7 @@ name = "skreate-wasm"
 version = "0.1.0"
 authors = ["David Drysdale <dmd@lurklurk.org>"]
 edition = "2021"
+license = "Apache-2.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
