--- a/doc/Cargo.toml
+++ b/doc/Cargo.toml
@@ -7,6 +7,7 @@ license = "Apache-2.0"
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
 handlebars = "6"
+regex = "1.10.5"
 serde_json = "1.0.39"
 skreate = "*"
 urlencoding = "2.1"
