Move rust-version into individual Cargo.toml

--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -3,6 +3,7 @@ name = "skreate"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+rust-version = "1.87"
 
 [dependencies]
 log = "0.4.21"
