--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -3,6 +3,7 @@ name = "skreate-cli"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+rust-version = "1.87"
 
 [dependencies]
 anyhow = "1.0"
