--- a/example-gen/Cargo.toml
+++ b/example-gen/Cargo.toml
@@ -3,6 +3,7 @@ name = "example-gen"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
+rust-version = "1.87"
 
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
