cli: add in/out options

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,6 +7,7 @@ rust-version = "1.87"
 
 [dependencies]
 anyhow = "1.0"
+clap = { version = "4.5", features = ["derive"] }
 env_logger = "0.11.3"
 log = "0.4.21"
 skreate = "*"
