--- a/example-gen/Cargo.toml
+++ b/example-gen/Cargo.toml
@@ -7,4 +7,5 @@ rust-version = "1.87"
 
 [dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
+sanitise-file-name = "1.0.0"
 skreate = "*"
